--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,8 @@
 {
   "spellright.language": ["en"],
-  "spellright.documentTypes": ["markdown", "latex", "plaintext"]
+  "spellright.documentTypes": ["markdown", "latex", "plaintext", "cpp"],
+  "files.associations": {
+    "iostream": "cpp",
+    "iosfwd": "cpp"
+  }
 }
